Notes line wrap fix

--- a/scinote-client/app.css
+++ b/scinote-client/app.css
@@ -241,7 +241,7 @@ h6 {font-size: 1em;}
     background: #fcfcff;
     border: 1px solid #d9d9d9;
     padding: 2px 10px;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .paper-notes:hover {
